Cleanup additional redundant changes