@@ -1,2 +1,1 @@
 -Ddevelocity.scan.disabled=true
---enable-preview
